--- a/examples/user-management-shell/pom.xml
+++ b/examples/user-management-shell/pom.xml
@@ -43,7 +43,7 @@
 		<dependency>
 			<groupId>com.absio</groupId>
 			<artifactId>absio-sdk</artifactId>
-			<version>1.2.0</version>
+			<version>1.3.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.conscrypt</groupId>
