--- a/examples/key-management-app/pom.xml
+++ b/examples/key-management-app/pom.xml
@@ -67,7 +67,7 @@
         <dependency>
             <groupId>com.absio</groupId>
             <artifactId>absio-sdk</artifactId>
-            <version>1.2.0-SNAPSHOT</version>
+            <version>1.3.0</version>
         </dependency>
         <dependency>
             <groupId>org.conscrypt</groupId>
