--- a/examples/key-management-app/pom.xml
+++ b/examples/key-management-app/pom.xml
@@ -89,7 +89,7 @@
         <dependency>
             <groupId>com.absio</groupId>
             <artifactId>absio-sdk</artifactId>
-            <version>1.4.0-SNAPSHOT</version>
+            <version>1.4.0</version>
         </dependency>
         <dependency>
             <groupId>org.conscrypt</groupId>
