--- a/examples/user-management-shell/pom.xml
+++ b/examples/user-management-shell/pom.xml
@@ -24,12 +24,12 @@
             <url>https://nexus.absio.com/repository/maven-releases/</url>
         </repository>
         <repository>
-            <id>absio-intnexus-stage</id>
-            <url>https://intnexus.absio.com/repository/maven-stage/</url>
+            <id>absio-nexus-stage</id>
+            <url>https://nexus.absio.com/repository/maven-stage/</url>
         </repository>
         <repository>
-            <id>absio-intnexus</id>
-            <url>https://intnexus.absio.com/repository/maven-snapshots/</url>
+            <id>absio-nexus-snapshots</id>
+            <url>https://nexus.absio.com/repository/maven-snapshots/</url>
         </repository>
     </repositories>
 
