--- a/examples/key-management-app/pom.xml
+++ b/examples/key-management-app/pom.xml
@@ -6,28 +6,27 @@
 
     <groupId>com.absio</groupId>
     <artifactId>key-management-app</artifactId>
-    <version>0.0.2</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
 
     <repositories>
         <repository>
             <id>absio-nexus</id>
-            <url>https://nexus.absio.com/repository/maven-releases/</url>
+            <url>https://intnexus.absio.com/repository/maven-releases/</url>
         </repository>
         <repository>
             <id>absio-nexus-stage</id>
-            <url>https://nexus.absio.com/repository/maven-stage/</url>
+            <url>https://intnexus.absio.com/repository/maven-stage/</url>
         </repository>
         <repository>
             <id>absio-nexus-snapshots</id>
-            <url>https://nexus.absio.com/repository/maven-snapshots/</url>
+            <url>https://intnexus.absio.com/repository/maven-snapshots/</url>
         </repository>
     </repositories>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.8</java.version>
     </properties>
 
     <build>
@@ -35,17 +34,17 @@
             <extension>
                 <groupId>kr.motd.maven</groupId>
                 <artifactId>os-maven-plugin</artifactId>
-                <version>1.4.1.Final</version>
+                <version>1.7.0</version>
             </extension>
         </extensions>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.7.0</version>
+                <version>3.8.1</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -89,7 +88,7 @@
         <dependency>
             <groupId>com.absio</groupId>
             <artifactId>absio-sdk</artifactId>
-            <version>1.5.3</version>
+            <version>1.6.0</version>
         </dependency>
         <dependency>
             <groupId>org.conscrypt</groupId>
