--- a/examples/user-management-shell/pom.xml
+++ b/examples/user-management-shell/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.absio</groupId>
     <artifactId>user-management-shell</artifactId>
-    <version>0.0.2</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
 
     <name>user-management-shell</name>
@@ -14,36 +14,35 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.0.RELEASE</version>
+        <version>2.6.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <repositories>
         <repository>
             <id>absio-nexus</id>
-            <url>https://nexus.absio.com/repository/maven-releases/</url>
+            <url>https://intnexus.absio.com/repository/maven-releases/</url>
         </repository>
         <repository>
             <id>absio-nexus-stage</id>
-            <url>https://nexus.absio.com/repository/maven-stage/</url>
+            <url>https://intnexus.absio.com/repository/maven-stage/</url>
         </repository>
         <repository>
             <id>absio-nexus-snapshots</id>
-            <url>https://nexus.absio.com/repository/maven-snapshots/</url>
+            <url>https://intnexus.absio.com/repository/maven-snapshots/</url>
         </repository>
     </repositories>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.8</java.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>com.absio</groupId>
             <artifactId>absio-sdk</artifactId>
-            <version>1.5.3</version>
+            <version>1.6.0</version>
         </dependency>
         <dependency>
             <groupId>org.conscrypt</groupId>
@@ -58,7 +57,7 @@
         <dependency>
             <groupId>org.springframework.shell</groupId>
             <artifactId>spring-shell-starter</artifactId>
-            <version>2.0.0.RELEASE</version>
+            <version>2.0.1.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -77,7 +76,7 @@
             <extension>
                 <groupId>kr.motd.maven</groupId>
                 <artifactId>os-maven-plugin</artifactId>
-                <version>1.4.1.Final</version>
+                <version>1.7.0</version>
             </extension>
         </extensions>
         <plugins>
