--- a/examples/user-management-shell/pom.xml
+++ b/examples/user-management-shell/pom.xml
@@ -2,6 +2,9 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <prerequisites>
+        <maven>3.6.0</maven>
+    </prerequisites>
 
     <groupId>com.absio</groupId>
     <artifactId>user-management-shell</artifactId>
@@ -36,28 +39,37 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <!-- Absio modules -->
+        <absio-sdk.version>1.6.0</absio-sdk.version>
+        <absio-conscrypt-openjdk-uber.version>1.4.2</absio-conscrypt-openjdk-uber.version>
+        <absio-TSS.Java.version>0.3.2</absio-TSS.Java.version>
+        <!-- / -->
+        <spring-boot-starter.version>2.6.2</spring-boot-starter.version>
+        <spring-shell-starter.version>2.0.1.RELEASE</spring-shell-starter.version>
+        <os-maven-plugin.version>1.7.0</os-maven-plugin.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>com.absio</groupId>
             <artifactId>absio-sdk</artifactId>
-            <version>1.6.0</version>
+            <version>${absio-sdk.version}</version>
         </dependency>
         <dependency>
             <groupId>org.conscrypt</groupId>
             <artifactId>absio-conscrypt-openjdk</artifactId>
-            <version>1.4.2</version>
+            <version>${absio-conscrypt-openjdk-uber.version}</version>
             <classifier>${os.detected.classifier}</classifier>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
+            <version>${spring-boot-starter.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.shell</groupId>
             <artifactId>spring-shell-starter</artifactId>
-            <version>2.0.1.RELEASE</version>
+            <version>${spring-shell-starter.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -76,7 +88,7 @@
             <extension>
                 <groupId>kr.motd.maven</groupId>
                 <artifactId>os-maven-plugin</artifactId>
-                <version>1.7.0</version>
+                <version>${os-maven-plugin.version}</version>
             </extension>
         </extensions>
         <plugins>
